--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
-			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 xmlns:mx="library://ns.adobe.com/flex/halo">
+			 xmlns:mx="library://ns.adobe.com/flex/halo"
+			 xmlns:s="library://ns.adobe.com/flex/spark">
 
 	<fx:Metadata>
 		<![CDATA[ 
@@ -11,9 +11,9 @@
 
 	<s:states>
 
-		<s:State name="normal" />
+		<s:State name="normal"/>
 
-		<s:State name="disabled" />
+		<s:State name="disabled"/>
 	</s:states>
 
 	<s:Rect id="backgroundRect"
@@ -22,14 +22,15 @@
 		<s:fill>
 
 			<s:SolidColor color="gray"
-						  alpha=".5" />
+						  alpha=".5"/>
 		</s:fill>
 
 		<s:stroke>
 
-			<s:SolidColorStroke />
+			<s:SolidColorStroke/>
 		</s:stroke>
 	</s:Rect>
-
-	<s:Group id="contentGroup" />
+	<s:Scroller height="100%" width="100%">
+		<s:Group id="contentGroup"/>
+	</s:Scroller>
 </s:SparkSkin>
