--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/PropertiesPanel.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/PropertiesPanel.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 
 		 title="{ resourceManager.getString( 'Tree_General', 'properties_panel_title' ) }">
 
@@ -9,10 +9,12 @@
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
 			import mx.binding.utils.ChangeWatcher;
-
+			
 			import net.vdombox.ide.common.vo.AttributeVO;
 			import net.vdombox.ide.common.vo.PageAttributesVO;
 			import net.vdombox.ide.modules.tree.events.PropertiesPanelEvent;
+			
+			import spark.skins.spark.PanelSkin;
 
 			private var _pageAttributesVO : PageAttributesVO;
 
