git-svn-id: http://svn.vdombox.ru/flextools/trunk@5974 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Body.mxml
@@ -13,7 +13,7 @@
 	<s:VGroup height="100%" width="220">
 
 		<components:ObjectsTreePanel id="objectsTreePanel"
-									 width="100%" />
+									 width="100%" title="{ resourceManager.getString( 'Events_General', 'objects_tree_panel_title' ) }" />
 
 		<components:EventsPanel id="eventsPanel"
 								width="100%" />
