--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
@@ -10,8 +10,9 @@
 		<![CDATA[
 			import net.vdombox.ide.common.vo.EventParameterVO;
 			import net.vdombox.ide.common.vo.EventVO;
+			import net.vdombox.ide.modules.events.events.ElementEvent;
 			import net.vdombox.ide.modules.events.view.skins.EventElementSkin;
-
+			
 			import spark.components.Group;
 			import spark.components.Label;
 			import spark.skins.spark.PanelSkin;
@@ -91,6 +92,7 @@
 			{
 				stage.addEventListener( MouseEvent.MOUSE_UP, stage_mouseUpHandler );
 				stage.addEventListener( MouseEvent.MOUSE_MOVE, stage_mouseMoveHandler );
+				stage.addEventListener( MouseEvent.MOUSE_MOVE, stage_mouseMoveHandlerExt );
 
 				mouseOffcetX = mouseX;
 				mouseOffcetY = mouseY;
@@ -112,6 +114,12 @@
 					y = newY;
 			}
 
+			private function stage_mouseMoveHandlerExt( event : MouseEvent ) : void
+			{
+				dispatchEvent( new ElementEvent( ElementEvent.MOVED ) );
+				stage.removeEventListener( MouseEvent.MOUSE_MOVE, stage_mouseMoveHandlerExt );
+			}
+			
 			private function stage_mouseUpHandler( event : MouseEvent ) : void
 			{
 				stage.removeEventListener( MouseEvent.MOUSE_MOVE, stage_mouseMoveHandler );
@@ -125,8 +133,23 @@
 		<s:VerticalLayout gap="1"/>
 	</s:layout>
 
-	<components:ParameterRenderer width="100%"
-								  title="{ title }"/>
+	<s:Group height="20" width="100%">
+		
+		<s:Rect bottom="0" left="0" right="0" top="0">
+			
+			<s:fill>
+				
+				<s:LinearGradient rotation="90">
+					
+					<s:GradientEntry color="0xFFFFFF"/>
+					
+					<s:GradientEntry color="0xF8F8F8"/>
+				</s:LinearGradient>
+			</s:fill>
+		</s:Rect>
+		
+		<s:Label text="{ data.objectName }" textAlign="center" verticalCenter="0" left="5" right="5" width="100%" maxDisplayedLines="1"/>
+	</s:Group>
 
 	<components:ParameterRenderer icon="@Embed('assets/event.png')" width="100%"
 								  title="{ title }"/>
