--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
@@ -2,21 +2,29 @@
 <s:Panel xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 
-		 backgroundAlpha="0" cornerRadius="5"
-		 borderAlpha="0" borderVisible="false"
+		 backgroundAlpha="0"
+		 cornerRadius="5"
+		 borderAlpha="0"
+		 borderVisible="false"
 		 skinClass="net.vdombox.ide.modules.events.view.skins.PanelSkin">
 
 	<s:layout>
 
-		<s:VerticalLayout />
+		<s:VerticalLayout/>
 	</s:layout>
+	<fx:Script>
+		<![CDATA[
+			import mx.controls.treeClasses.TreeItemRenderer;
+		]]>
+	</fx:Script>
 
 	<mx:Tree id="objectsTree"
-			 height="100%" width="100%" />
+			 itemRenderer="{new ClassFactory( TreeItemRenderer )}"
+			 height="100%"
+			 width="100%"/>
 
 	<s:controlBarContent>
 
-		<mx:Spacer height="1" />
+		<mx:Spacer height="1"/>
 	</s:controlBarContent>
 </s:Panel>
