--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
@@ -3,7 +3,8 @@
 			 xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 minWidth="200">
+			 minWidth="200"
+			 creationComplete="sparkskin1_creationCompleteHandler(event)">
 
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.events.view.components.EventElement")]
@@ -11,6 +12,11 @@
 
 	<fx:Script>
 		<![CDATA[
+			import mx.binding.utils.BindingUtils;
+			import mx.binding.utils.ChangeWatcher;
+			import mx.events.FlexEvent;
+
+			import net.vdombox.ide.common.vo.EventVO;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 
 			protected function hideButton_clickHandler( event : MouseEvent ) : void
@@ -24,7 +30,77 @@
 					currentState = currentState.substr( 0, currentState.length - 8 );
 				}
 
-				hostComponent.dispatchEvent( new ElementEvent( ElementEvent.STATE_CHANGED ));
+				isStateChanged = true;
+				invalidateProperties();
+				hostComponent.dispatchEvent( new ElementEvent( ElementEvent.STATE_CHANGED ) );
+			}
+
+			private var _data : EventVO;
+
+			private var isDataChanged : Boolean = false;
+			private var isStateChanged : Boolean = false;
+
+//			public function get data() : EventVO
+//			{
+//				return _data;
+//			}
+
+			public function set data( value : EventVO ) : void
+			{
+				_data = value;
+
+				isDataChanged = true;
+				invalidateProperties();
+			}
+
+			protected function sparkskin1_creationCompleteHandler( event : FlexEvent ) : void
+			{
+				BindingUtils.bindProperty( this, "data", hostComponent, "data", true );
+			}
+
+			override protected function commitProperties() : void
+			{
+				super.commitProperties();
+
+				if ( isDataChanged )
+				{
+					isDataChanged = false;
+
+					if ( hostComponent.data )
+					{
+						if ( !hostComponent.data.state && ( currentState == "normal" || currentState == "disabled" ) )
+							currentState = currentState + "AndShort";
+						else if ( hostComponent.data.state && ( currentState == "normalAndShort" || currentState == "disabledAndShort" ) )
+							currentState = currentState.substring( 0, currentState.length - 8 );
+					}
+				}
+
+				if ( isStateChanged )
+				{
+					isStateChanged = false;
+
+					if ( !hostComponent.data )
+						return;
+
+					if ( currentState == "normal" || currentState == "disabled" )
+						hostComponent.data.state = true;
+					else
+						hostComponent.data.state = false;
+				}
+			}
+
+			override protected function stateChanged( oldState : String, newState : String, recursive : Boolean ) : void
+			{
+				if ( !hostComponent.data )
+				{
+					titleLabel.text = "";
+					return;
+				}
+
+				if ( newState == "normal" || newState == "disabled" )
+					titleLabel.text = headerGroup.toolTip = hostComponent.data.name;
+				else
+					titleLabel.text = headerGroup.toolTip = hostComponent.data.objectName + ":" + hostComponent.data.name;
 			}
 		]]>
 	</fx:Script>
@@ -95,8 +171,9 @@
 
 				<s:Label id="titleLabel"
 						 text="{ hostComponent.title }"
-						 color="#FFFFFF" left="0" right="0" textAlign="center"
-						 verticalCenter="0"/>
+						 color="#FFFFFF" left="5" right="5" textAlign="center"
+						 verticalCenter="0"
+						 maxDisplayedLines="1"/>
 			</s:Group>
 
 			<s:Group id="contentGroup"
@@ -117,17 +194,19 @@
 						  gap="1">
 
 					<components:ElementButton id="hideButton"
-											  height="17" icon.full="@Embed('assets/hide.png')" icon.short="@Embed('assets/show.png')" label="translate"
+											  height="17" icon.full="@Embed('assets/hide.png')" icon.short="@Embed('assets/show.png')"
+											  label.full="{ resourceManager.getString( 'Events_General', 'event_element_hide' ) }"
+											  label.short="{ resourceManager.getString( 'Events_General', 'event_element_show' ) }"
 											  minWidth="10" width="100%"
 											  cornerRadius="0" skinClass="net.vdombox.ide.modules.events.view.skins.ElementButtonSkin"
 											  click="hideButton_clickHandler( event )"/>
 
-					<components:ElementButton height="17" icon="@Embed('assets/arrow.png')" label="translate" minWidth="10"
+					<components:ElementButton height="17" icon="@Embed('assets/arrow.png')" label="{ resourceManager.getString( 'Events_General', 'event_element_create_linkage' ) }" minWidth="10"
 											  width="100%"
 											  cornerRadius="0" skinClass="net.vdombox.ide.modules.events.view.skins.ElementButtonSkin"
 											  click="hostComponent.dispatchEvent( new ElementEvent( ElementEvent.CREATE_LINKAGE ) )"/>
 
-					<components:ElementButton height="17" icon="@Embed('assets/delete.png')" label="translate" minWidth="10"
+					<components:ElementButton height="17" icon="@Embed('assets/delete.png')" label="{ resourceManager.getString( 'Events_General', 'event_element_delete' ) }" minWidth="10"
 											  width="100%"
 											  cornerRadius="0" skinClass="net.vdombox.ide.modules.events.view.skins.ElementButtonSkin"
 											  click="hostComponent.dispatchEvent( new ElementEvent( ElementEvent.DELETE ) )"/>
