--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsPanelSkin.mxml
@@ -1,6 +1,5 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 
 			 creationComplete="creationCompleteHandler()">
 
 	<fx:Metadata>
@@ -15,13 +14,11 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayList;
+			import mx.resources.IResourceManager;
+			import mx.resources.ResourceManager;
 			import mx.utils.ObjectProxy;
 
 			import spark.skins.spark.DefaultItemRenderer;
-
-			public var eventsTitleObject : ObjectProxy = new ObjectProxy( { title: "Events" } );
-
-			public var actionsTitleObject : ObjectProxy = new ObjectProxy( { title: "Actions" } );
 
 			override protected function updateDisplayList( unscaledWidth : Number, unscaledHeight : Number ) : void
 			{
@@ -34,10 +31,10 @@
 
 			protected function creationCompleteHandler() : void
 			{
-				titleBar.dataProvider = new ArrayList( [ eventsTitleObject, actionsTitleObject ] );
+				titleBar.dataProvider =
+					new ArrayList( [ resourceManager.getString( "Events_General", "events_panel_events_title" ),
+									resourceManager.getString( "Events_General", "events_panel_actions_title" ) ] );
 				titleBar.selectedIndex = 0;
-
-				DefaultItemRenderer
 			}
 
 			protected function titleBar_clickHandler( event : MouseEvent ) : void
@@ -52,34 +49,35 @@
 
 	<s:states>
 
-		<s:State name="events" />
+		<s:State name="events"/>
 
-		<s:State name="actions" />
+		<s:State name="actions"/>
 	</s:states>
 
 	<s:RectangularDropShadow id="dropShadow"
-							 bottom="0" color="#000000" left="0" right="0" top="0"
-							 alpha="0.32" angle="90" blRadius="5" blurX="20" blurY="20" brRadius="5"
-							 distance="11" tlRadius="5" trRadius="5" />
+							 bottom="0" color="#000000" left="0" right="0"
+							 top="0"
+							 alpha="0.32" angle="90" blRadius="5" blurX="20"
+							 blurY="20" brRadius="5" distance="11" tlRadius="5"
+							 trRadius="5"/>
 
 	<s:VGroup bottom="0" left="0" right="0" top="0"
 			  gap="0">
 
 		<s:ButtonBar id="titleBar"
-					 labelField="title"
-					 click="titleBar_clickHandler(event)" />
+					 height="20" labelField="title"
+					 skinClass="net.vdombox.ide.modules.events.view.skins.EventsBarSkin"
+					 click="titleBar_clickHandler(event)"/>
 
 		<s:Group height="100%" width="100%">
 
-			<s:List id="evetsList"
+			<s:List id="eventsList"
 					height="100%" labelField="name" width="100%"
-					includeIn="events" itemCreationPolicy="immediate"
-					itemRenderer="net.vdombox.ide.modules.events.view.components.EventItemRenderer" />
+					dragEnabled="true" includeIn="events" itemCreationPolicy="immediate" itemRenderer="net.vdombox.ide.modules.events.view.components.EventItemRenderer"/>
 
 			<s:List id="actionsList"
 					height="100%" labelField="name" width="100%"
-					includeIn="actions" itemCreationPolicy="immediate"
-					itemRenderer="net.vdombox.ide.modules.events.view.components.ActionItemRenderer" />
+					dragEnabled="true" includeIn="actions" itemCreationPolicy="immediate" itemRenderer="net.vdombox.ide.modules.events.view.components.ActionItemRenderer"/>
 		</s:Group>
 
 		<s:Rect height="15" width="100%"
@@ -87,7 +85,7 @@
 
 			<s:fill>
 
-				<s:SolidColor color="0xD4D4D4" />
+				<s:SolidColor color="0xD4D4D4"/>
 				<!--<s:LinearGradient rotation="90">
 					 <s:GradientEntry color="0xDADADA" />
 					 <s:GradientEntry color="0xC5C5C5" />
