git-svn-id: http://svn.vdombox.ru/flextools/trunk@5976 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/EditArea.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/EditArea.mxml
@@ -149,7 +149,7 @@
 						syntax: _syntax } );
 
 				if ( _content )
-					content = _content; // FIXME fix!
+					content = _content; // FIXME: fix!
 			}
 
 			private function showHandler() : void
