--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/WorkArea.mxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<components:Item xmlns:fx="http://ns.adobe.com/mxml/2009"
-				 xmlns:s="library://ns.adobe.com/flex/spark"
+<components:Item xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
+				 xmlns:fx="http://ns.adobe.com/mxml/2009"
 				 xmlns:mx="library://ns.adobe.com/flex/halo"
-				 xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
-				 
+				 xmlns:s="library://ns.adobe.com/flex/spark"
 				 itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.Item">
 
 	<fx:Script>
 		<![CDATA[
 			import com.zavoo.svg.SVGViewer;
-
+			
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
@@ -18,11 +17,11 @@
 			import mx.core.UIComponent;
 			import mx.graphics.SolidColor;
 			import mx.graphics.SolidColorStroke;
-
+			
 			import net.vdombox.ide.common.vo.AttributeVO;
 			import net.vdombox.ide.modules.wysiwyg.model.vo.ItemVO;
 			import net.vdombox.ide.modules.wysiwyg.view.skins.WorkAreaSkin;
-
+			
 			import spark.components.Group;
 
 			private var _itemVO : ItemVO;
@@ -185,6 +184,6 @@
 
 	<components:layout>
 
-		<s:BasicLayout clipAndEnableScrolling="true" />
+		<s:BasicLayout clipAndEnableScrolling="true"/>
 	</components:layout>
 </components:Item>
