--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -1,7 +1,6 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
-			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 xmlns:mx="library://ns.adobe.com/flex/mx"
-			 
+			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 height="400" width="500"
 			 alpha.disabledGroup="0.5">
 
@@ -11,7 +10,6 @@
 
 	<fx:Script>
 		<![CDATA[
-			
 			/*  Define the skin elements that should not be colorized.
 			 *  For WindowedApplication, border and status bar background are colorized,
 			 *  but the content area and status text are not.
@@ -24,7 +22,7 @@
 			 * @productversion Flex 4
 			 */
 			static private const exclusions : Array = [ "backgroundRect", "contentGroup", "titleBar", "titleBarBackgroundRect", "statusText",
-														"borderBgFill" ];
+				"borderBgFill" ];
 
 			/**
 			 * @inheritDoc
@@ -43,13 +41,13 @@
 
 	<s:states>
 
-		<s:State name="normal" />
+		<s:State name="normal"/>
 
-		<s:State name="disabled" stateGroups="disabledGroup" />
+		<s:State name="disabled" stateGroups="disabledGroup"/>
 
-		<s:State name="normalAndInactive" stateGroups="inactiveGroup" />
+		<s:State name="normalAndInactive" stateGroups="inactiveGroup"/>
 
-		<s:State name="disabledAndInactive" stateGroups="disabledGroup, inactiveGroup" />
+		<s:State name="disabledAndInactive" stateGroups="disabledGroup, inactiveGroup"/>
 	</s:states>
 	<!-- layer 1: background fill -->
 	<!--- Defines the background color of the skin. -->
@@ -61,7 +59,7 @@
 		<s:stroke>
 
 			<s:SolidColorStroke color="0xCCCCCC"
-								weight="1" />
+								weight="1"/>
 		</s:stroke>
 
 		<s:fill>
@@ -70,9 +68,9 @@
 			<s:LinearGradient id="bgFill"
 							  rotation="90">
 
-				<s:GradientEntry color="0x333333" />
+				<s:GradientEntry color="0x333333"/>
 
-				<s:GradientEntry color="0x000000" />
+				<s:GradientEntry color="0x000000"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
@@ -88,7 +86,7 @@
 			<s:fill>
 
 				<s:SolidColor color="0x000000"
-							  alpha="1" />
+							  alpha="1"/>
 			</s:fill>
 		</s:Rect>
 	</s:Group>
@@ -96,27 +94,27 @@
 
 	<s:Group bottom="1" left="1" right="1" top="1"
 			 mask="{topMask}">
-	
+
 		<s:TitleBar id="titleBar"
-			 minHeight="50" width="100%"
-			 alpha.inactiveGroup="0.5"
-			 skinClass="net.vdombox.ide.core.view.skins.MainWindowTitleBarSkin" />
+					minHeight="50" width="100%"
+					skinClass="net.vdombox.ide.core.view.skins.MainWindowTitleBarSkin"
+					alpha.inactiveGroup="0.5"/>
 
 		<!--<s:Group height="50" width="100%">
 
-			<s:Rect height="100%" width="100%">
+			 <s:Rect height="100%" width="100%">
 
-				<s:fill>
+			 <s:fill>
 
-					<s:LinearGradient rotation="90">
+			 <s:LinearGradient rotation="90">
 
-						<s:GradientEntry color="0x7B7C80" />
+			 <s:GradientEntry color="0x7B7C80" />
 
-						<s:GradientEntry color="0x18191B" />
-					</s:LinearGradient>
-				</s:fill>
-			</s:Rect>
-		</s:Group>-->
+			 <s:GradientEntry color="0x18191B" />
+			 </s:LinearGradient>
+			 </s:fill>
+			 </s:Rect>
+			 </s:Group>-->
 
 		<s:Rect height="100%" minHeight="0" minWidth="0" width="100%"
 				bottom="15" top="85">
@@ -125,9 +123,9 @@
 
 				<s:LinearGradient rotation="90">
 
-					<s:GradientEntry color="0x4D5258" />
+					<s:GradientEntry color="0x4D5258"/>
 
-					<s:GradientEntry color="0x000000" />
+					<s:GradientEntry color="0x000000"/>
 				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
@@ -137,34 +135,35 @@
 
 			<s:filters>
 
-				<mx:DropShadowFilter alpha=".5" angle="90" />
+				<mx:DropShadowFilter alpha=".5" angle="90"/>
 			</s:filters>
 
 			<s:fill>
 
 				<s:LinearGradient rotation="90">
 
-					<s:GradientEntry color="0xB5B6B8" />
+					<s:GradientEntry color="0xB5B6B8"/>
 
-					<s:GradientEntry color="0x77787C" />
+					<s:GradientEntry color="0x77787C"/>
 				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
 
 		<s:ButtonBar id="tabBar"
 					 height="20"
-					 left="100" top="30"
-					 requireSelection="true" skinClass="net.vdombox.ide.core.view.skins.TabBarSkin" />
+					 left="100" skinClass="net.vdombox.ide.core.view.skins.TabBarSkin" top="30"
+					 requireSelection="true"/>
 
 		<s:Group height="35" width="100%"
 				 top="50">
 
 			<s:layout>
 
-				<s:HorizontalLayout paddingLeft="100" verticalAlign="middle" />
+				<s:HorizontalLayout paddingLeft="100" verticalAlign="middle"/>
 			</s:layout>
 
-			<s:Group id="toolsetBar" width="100%" height="100%">
+			<s:Group id="toolsetBar"
+					 height="100%" width="100%">
 
 				<s:layout>
 
@@ -178,8 +177,9 @@
 		<!--- Defines the Group container where the content children get pushed into and laid out. -->
 
 		<s:Group id="contentGroup"
-				 minHeight="0" minWidth="0" width="100%"
-				 bottom="15" top="85"  height.normalAndInactive="100%" height.disabledAndInactive="100%" height.disabled="100%" top.normal="90" bottom.normal="15"/>
+				 height.disabled="100%" height.disabledAndInactive="100%" height.normalAndInactive="100%" minHeight="0"
+				 minWidth="0" width="100%"
+				 bottom="15" top="90"/>
 		<!-- status bar -->
 		<!--- Defines the Group container for the status bar. -->
 
@@ -192,7 +192,7 @@
 
 				<s:fill>
 
-					<s:SolidColor color="0xCCCCCC" />
+					<s:SolidColor color="0xCCCCCC"/>
 				</s:fill>
 			</s:Rect>
 			<!-- status bar highlight -->
@@ -201,7 +201,7 @@
 
 				<s:stroke>
 
-					<s:SolidColorStroke color="0xCCCCCC" />
+					<s:SolidColorStroke color="0xCCCCCC"/>
 				</s:stroke>
 			</s:Rect>
 			<!-- status text -->
@@ -209,18 +209,19 @@
 
 			<s:Label id="statusText"
 					 width="100%"
-					 bottom="2" color="0x585858" fontSize="10" left="10" right="10" top="2"
-					 verticalAlign="middle"
-					 maxDisplayedLines="1" />
+					 bottom="2" color="0x585858" fontSize="10" left="10"
+					 right="10" top="2" verticalAlign="middle"
+					 maxDisplayedLines="1"/>
 		</s:Group>
 	</s:Group>
 
 	<mx:Image id="settingsButton"
-			  buttonMode="true" source="@Embed('assets/login/logo.png')" x="20" y="10">
+			  source="@Embed('assets/login/logo.png')" x="20" y="10"
+			  buttonMode="true">
 
 		<mx:filters>
 
-			<s:GlowFilter color="0x000000" />
+			<s:GlowFilter color="0x000000"/>
 		</mx:filters>
 	</mx:Image>
 	<!--<s:BitmapImage
@@ -239,8 +240,8 @@
 	-->
 
 	<s:Button id="gripper"
-			  bottom="3" right="3"
-			  skinClass="spark.skins.spark.windowChrome.GripperSkin" tabEnabled="false" />
+			  bottom="3" right="3" skinClass="spark.skins.spark.windowChrome.GripperSkin"
+			  tabEnabled="false"/>
 	<!-- layer 4: border -->
 	<!-- background of border for when it is alpha=0.5 -->
 	<!--- Defines the background color of the border. -->
