git-svn-id: http://svn.vdombox.ru/flextools/trunk@5989 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/Events.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/Events.mxml
@@ -44,7 +44,7 @@
 
 			override public function get hasSettings() : Boolean
 			{
-				return true;
+				return false;
 			}
 
 			override public function get hasBody() : Boolean
