--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Body.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Body.mxml
@@ -1,111 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:HGroup xmlns:mx="library://ns.adobe.com/flex/mx"
-		  xmlns:components="net.vdombox.ide.modules.resourceBrowser.view.components.*"
+<s:HGroup xmlns:components="net.vdombox.ide.modules.resourceBrowser.view.components.*"
 		  xmlns:fx="http://ns.adobe.com/mxml/2009"
+		  xmlns:mx="library://ns.adobe.com/flex/mx"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
-		  
 		  height="100%" width="100%">
 
-	<fx:Script>
-		<![CDATA[
-			import net.vdombox.ide.common.vo.ResourceVO;
+	<components:ResourcesList id="resourcesList"
+							  height="100%" minWidth="200"/>
 
-			[Bindable]
-			private var _selectedResourceVO : ResourceVO;
-
-			public function set selectedResourceVO( value : ResourceVO ) : void
-			{
-				_selectedResourceVO = value;
-
-				var type : String = _selectedResourceVO ? _selectedResourceVO.type : "";
-
-				if ( type == "jpg" || type == "jpeg" || type == "png" || type == "gif" )
-					preview.source = _selectedResourceVO.data;
-				else
-					preview.source = null;
-			}
-		]]>
-	</fx:Script>
-
-	<s:List id="resourceList"
-			height="100%" labelField="name" width="200"
-			itemRenderer="net.vdombox.ide.modules.resourceBrowser.view.components.ListItemRenderer"
-			useVirtualLayout="false" />
-
-	<s:VGroup height="100%" width="100%">
-
-		<components:LoadResourcesView id="loadResourcesView"
-									  width="100%" />
-
-		<s:VGroup height="100%" width="100%"
-				  horizontalAlign="center">
-
-			<s:Group id="__previewArea"
-					 height="100%" width="100%">
-
-				<s:Scroller height="100%" width="100%">
-
-					<s:Group>
-
-						<mx:Image id="preview"
-								  horizontalCenter="0" verticalCenter="0" />
-					</s:Group>
-				</s:Scroller>
-			</s:Group>
-
-			<s:HGroup width="100%">
-
-				<mx:Spacer width="100%" />
-
-				<s:Label text="Name: " />
-
-				<s:Label id="__rName"
-						 height="18" maxWidth="350"
-						 text="{ _selectedResourceVO.name }"
-						 fontWeight="bold" />
-
-				<s:Label text="Type: " />
-
-				<s:Label id="__rType"
-						 height="18" text="{ _selectedResourceVO.type }"
-						 fontWeight="bold" />
-
-				<s:Label id="__iResolution"
-						 height="18" text=""
-						 fontWeight="bold" />
-
-				<mx:Spacer width="100%" />
-			</s:HGroup>
-
-			<s:HGroup width="100%">
-
-				<mx:Spacer width="100%" />
-
-				<s:Label text="ID: " />
-
-				<s:Label height="18" text="{ _selectedResourceVO.id }"
-						 fontWeight="bold" />
-
-				<mx:Spacer width="100%" />
-			</s:HGroup>
-
-			<s:Button id="deleteButton"
-					  enabled="false" label="Delete"
-					  click="dispatchEvent( new Event('deleteResource') )" />
-		</s:VGroup>
-		<!--<s:Group height="100%" width="100%">
-
-			 <s:layout>
-
-			 <s:VerticalLayout />
-			 </s:layout>
-
-			 <mx:Image id="preview"
-			 height="100%" width="100%"
-			 horizontalCenter="0" verticalCenter="0" />
-
-			 <s:Button label="Delete"
-			 click="dispatchEvent( new Event('deleteResource') )" />
-			 </s:Group>-->
-	</s:VGroup>
+	<components:WorkArea id="workArea"
+						 height="100%" width="100%"/>
 </s:HGroup>
